# dynamicdashboard

./: .gitignore  README.md  justfile
backend/: .python-version  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a7961fbff1b5_add_is_superuser_and_domains_.py
backend/app/: main.py
backend/app/api/: api.py
backend/app/api/routes/: __init__.py  ai_chat.py  auth.py  ccxt.py  dashboard.py  deribit.py  domains.py  economic.py  fred.py  hyperliquid.py  market_data.py  truthsocial.py  twitter.py  vix.py
backend/app/api/services/: ai_service.py  ccxt_service.py  deribit_service.py  domain_service.py  economic_service.py  fred_service.py  hyperliquid_service.py  market_data_service.py  twitter_service.py  vix_service.py
backend/app/core/: auth.py  config.py
backend/app/db/: session.py
backend/app/models/: dashboard.py  domain.py  user.py
backend/tests/: conftest.py
backend/tests/api/routes/: test_hyperliquid.py
backend/tests/api/services/: test_hyperliquid_service.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: RootLayoutClient.tsx  ThemeToggle.tsx
frontend/src/components/ccxt/: CCXTExplorer.tsx
frontend/src/components/charts/: CCXTChart.tsx  (+3 more)
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/providers/: QueryProvider.tsx
(+21 files in other folders)
