[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamicdashboard"
version = "0.1.0"
description = "Dynamic Dashboard Backend"
requires-python = ">=3.9"
authors = [
    {name = "Matthew Black"}
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
asyncio_mode = "auto" 